Revert "fix(gui): Broken color in dark mode"
This reverts commit 2ea00f65b260dcb34265a68ff2e2983e322f1160.

--- a/src/ui/theme.css
+++ b/src/ui/theme.css
@@ -332,8 +332,7 @@
 }
 
 #undiscord .log-debug {
-    /* Buggy color on my Discord */
-    color: white;
+    color: inherit;
 }
 
 #undiscord .log-info {
